--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
     - name: Check code
       uses: actions/checkout@v4
-    - name: Setup node.js
+    - name: Setup node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
